--- a/app/templates/student_dashboard.html
+++ b/app/templates/student_dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}My Results - Student Result Portal{% endblock %}
+{% block title %}My Results - Efficient Performance Result Automation via Dockerized DevOps Framework{% endblock %}
 
 {% block content %}
 <div class="space-y-8">
